; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_utilities.c_slice_from_s.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_utilities.c_slice_from_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SN_env = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @slice_from_s(%struct.SN_env* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.SN_env*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.SN_env* %0, %struct.SN_env** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load %struct.SN_env*, %struct.SN_env** %5, align 8
  %9 = call i64 @slice_check(%struct.SN_env* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %23

12:                                               ; preds = %3
  %13 = load %struct.SN_env*, %struct.SN_env** %5, align 8
  %14 = load %struct.SN_env*, %struct.SN_env** %5, align 8
  %15 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.SN_env*, %struct.SN_env** %5, align 8
  %18 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @replace_s(%struct.SN_env* %13, i32 %16, i32 %19, i32 %20, i32* %21, i32* null)
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %12, %11
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i64 @slice_check(%struct.SN_env*) #1

declare dso_local i32 @replace_s(%struct.SN_env*, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
